(fix): remove border and white background from image-cropper

--- a/src/app/modules/onboarding-v2/steps/avatar/avatar.component.scss
+++ b/src/app/modules/onboarding-v2/steps/avatar/avatar.component.scss
@@ -5,7 +5,6 @@ m-onboarding--avatarStep {
 
     image-cropper {
       padding: 0 !important;
-      border: 1px solid #d1d1d1;
     }
 
     & > img {
